src/objects/Log__c.object
<CustomObject><fields>
        <fullName>ApexClass__c</fullName>
        <description>Apex Class</description>
        <inlineHelpText>Apex Class</inlineHelpText>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ApexMethod__c</fullName>
        <description>Apex Method</description>
        <inlineHelpText>Apex Method</inlineHelpText>
        <label>Apex Method</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ExceptionLine__c</fullName>
        <description>ExceptionLine</description>
        <inlineHelpText>ExceptionLine</inlineHelpText>
        <label>ExceptionLine</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ExceptionType__c</fullName>
        <description>ExceptionType</description>
        <inlineHelpText>ExceptionType</inlineHelpText>
        <label>ExceptionType</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Limits__c</fullName>
        <description>Limits</description>
        <inlineHelpText>Limitd</inlineHelpText>
        <label>Limits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>LogType__c</fullName>
        <description>Log Type (INFO, ERROR, DEBUG, FATAL, EXCEPTION)</description>
        <inlineHelpText>Log Type (INFO, ERROR, DEBUG, FATAL, EXCEPTION)</inlineHelpText>
        <label>LogType</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Message__c</fullName>
        <description>Message</description>
        <inlineHelpText>Message</inlineHelpText>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Sequence__c</fullName>
        <description>Sequence</description>
        <inlineHelpText>Sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>StackTrace__c</fullName>
        <description>StackTrace</description>
        <inlineHelpText>StackTrace</inlineHelpText>
        <label>StackTrace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User</description>
        <inlineHelpText>User</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Logs</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Log</label><nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Logs</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ApexClass__c</columns>
        <columns>ApexMethod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>ExceptionLine__c</columns>
        <columns>ExceptionType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>ApexClass__c</columns>
        <columns>ApexMethod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>ExceptionLine__c</columns>
        <columns>ExceptionType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews></CustomObject>